--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ ul {
   background-color: #95d7f1 !important;
 }
 
+/************************************ START HEADER  ************************************/
 #header .social-media {
   height: 40px;
   line-height: 40px;
@@ -65,12 +66,21 @@ nav .nav-link {
   gap: 10px;
   border-radius: 5px;
   border: none;
-  background-image: linear-gradient(95deg, #304259 27.16%, #347BD9 170.44%);
+  background: linear-gradient(95deg, #304259 27.16%, #347BD9 170.44%);
   font-family: Tajawal;
   font-size: 16px;
   font-style: normal;
   font-weight: 800;
   color: #E1E1E1;
+  transition: .5s linear;
+  -webkit-transition: .5s linear;
+  -moz-transition: .5s linear;
+  -ms-transition: .5s linear;
+  -o-transition: .5s linear;
+}
+
+#header .ask-request:hover {
+  background: linear-gradient(119deg, #78A5DF 1.6%, #347BD9 99.59%);
 }
 
 #header {
@@ -86,7 +96,7 @@ nav .nav-link {
 }
 
 #header .headerContent {
-  height: calc(100vh - 80px);
+  height: calc(100vh - 120px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -103,6 +113,88 @@ nav .nav-link {
   font-style: normal;
   font-weight: 900;
 }
+
+/************************************ END HEADER  ************************************/
+
+/************************************ START VIDEO  ************************************/
+#video {
+  display: flex;
+  padding: 128px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  text-align: center;
+}
+
+#video h3 {
+  color: #1B4071;
+  font-family: Tajawal;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+#video p {
+  color: #595566;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+#video .video-container {
+  margin-top: 50px;
+  position: relative;
+}
+
+#video .video-container .video-photo {
+  border-radius: 28px;
+  -webkit-border-radius: 28px;
+  -moz-border-radius: 28px;
+  -ms-border-radius: 28px;
+  -o-border-radius: 28px;
+  position: relative;
+  z-index: 2;
+}
+
+#video .video-container .video-icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  z-index: 3;
+  cursor: pointer;
+}
+
+#video .video-container .right-top-video {
+  position: absolute;
+  top: -40px;
+  right: 0
+}
+
+#video .video-container .left-bottom-layer {
+  width: 164px;
+  height: 183px;
+  position: absolute;
+  bottom: -40px;
+  left: 0px;
+  background: #1B4071;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+/************************************ EN VIDEO  ************************************/
 
 @media (max-width: 991px) {
   nav .nav-item {
