--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-body {
-  background-color: #f1f1f1;
-  direction: rtl;
-}
-
 a {
   text-decoration: none;
 }
@@ -147,7 +142,7 @@ nav .nav-link {
 }
 
 #video .video-container {
-  margin-top: 50px;
+  margin-top: 16px;
   position: relative;
 }
 
@@ -176,16 +171,16 @@ nav .nav-link {
 
 #video .video-container .right-top-video {
   position: absolute;
-  top: -30px;
-  right: 0
+  top: -25px;
+  right: -20px
 }
 
 #video .video-container .left-bottom-layer {
   width: 164px;
   height: 183px;
   position: absolute;
-  bottom: -30px;
-  left: 0px;
+  bottom: -25px;
+  left: -20px;
   background: #1B4071;
   border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -195,6 +190,113 @@ nav .nav-link {
 }
 
 /************************************ EN VIDEO  ************************************/
+
+/************************************ START ARTICLEL  ************************************/
+#articles {
+  padding: 80px 0;
+  background: rgba(27, 64, 113, 0.05);
+}
+
+#articles .row {
+  padding-top: 60px;
+}
+
+#articles h3 {
+  color: #1B4071;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+#articles .article-block {
+  height: 300px;
+  position: relative;
+  cursor: pointer;
+}
+
+#articles .one {
+  background: url(../imgs/articles/1.png) center center/cover;
+
+}
+
+#articles .two {
+  background: url(../imgs/articles/2.png) center center/cover;
+}
+
+#articles .three {
+  background: url(../imgs/articles/3.png) center center/cover;
+}
+
+#articles .four {
+  background: url(../imgs/articles/4.png) center center/cover;
+}
+
+#articles .title {
+  color: #333;
+  font-family: Tajawal;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  transition: .2s linear;
+  -webkit-transition: .2s linear;
+  -moz-transition: .2s linear;
+  -ms-transition: .2s linear;
+  -o-transition: .2s linear;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  padding: 0 0 60px 60px;
+}
+
+#articles .article-block .content-layer {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: .2s linear;
+  -webkit-transition: .2s linear;
+  -moz-transition: .2s linear;
+  -ms-transition: .2s linear;
+  -o-transition: .2s linear;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  padding: 0 0 50px 100px;
+}
+
+#articles .article-block:hover .content-layer {
+  opacity: 1;
+}
+
+#articles .article-block:hover .title {
+  opacity: 0;
+}
+
+#articles .article-block .content-layer p {
+  display: inline-flex;
+  justify-content: flex-end;
+  align-items: center;
+  color: #333;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+
+}
+
+/************************************ END ARTICLEL  ************************************/
 
 @media (max-width: 991px) {
   nav .nav-item {
@@ -236,7 +338,7 @@ nav .nav-link {
   }
 
   #video p {
-    font-size: 16px;
+    font-size: 15px;
   }
 
   #video .video-container .right-top-video {
