--- a/css/main.css
+++ b/css/main.css
@@ -329,6 +329,92 @@ nav .nav-link {
 
 /************************************ END ARTICLEL  ************************************/
 
+/************************************ START SERVICES  ************************************/
+#services {
+  padding: 80px 0;
+}
+
+#services h3 {
+  height: 53px;
+  color: #1B4071;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 20px;
+}
+
+#services p {
+  color: #333;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+#services .service-block {
+  display: flex;
+  padding: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #F3F3F3;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  transition: .2s linear;
+  -webkit-transition: .2s linear;
+  -moz-transition: .2s linear;
+  -ms-transition: .2s linear;
+  -o-transition: .2s linear;
+  min-height: 100%;
+  cursor: pointer;
+}
+
+#services .service-block img {
+  margin-bottom: 12px;
+}
+
+#services .service-block h4 {
+  color: #333;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 150%;
+  margin-bottom: 30px;
+}
+
+#services .service-block p {
+  color: #333;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+
+#services .service-block:hover {
+  background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
+  box-shadow: 8px 8px 40px 5px rgba(0, 0, 0, 0.50);
+}
+
+#services .service-block:hover h4,
+#services .service-block:hover p {
+  color: #fff;
+}
+
+/************************************ END SERVICES  ************************************/
+
 @media (max-width: 991px) {
   nav .nav-item {
     margin-right: 0px;
@@ -399,6 +485,6 @@ nav .nav-link {
 
 @media (max-width: 575px) {
   #articles .article-block {
-    height: 300px;
+    height: 315px;
   }
 }
