--- a/css/main.css
+++ b/css/main.css
@@ -462,6 +462,69 @@ nav .nav-link {
 
 /************************************ END statistics  ************************************/
 
+/************************************ START testimonial  ************************************/
+#testimonial {
+  padding: 80px 0;
+  height: 100vh;
+}
+
+#testimonial h3 {
+  color: #181818;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 48px;
+}
+
+#testimonial img {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+#testimonial .info {
+  padding: 24px 16px;
+  display: flex;
+  flex-direction: column;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: #fcfbfb;
+}
+
+#testimonial .info .name {
+  color: #1B4071;
+  text-align: right;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 12px;
+}
+
+#testimonial .info .job {
+  color: #6B7280;
+  font-family: Tajawal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  margin-bottom: 10px;
+}
+
+#testimonial .info .desc {
+  color: #6B7280;
+  font-family: Tajawal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+/************************************ END testimonial  ************************************/
+
 @media (max-width: 991px) {
   nav .nav-item {
     margin-right: 0px;
@@ -531,7 +594,6 @@ nav .nav-link {
 
   #statistics .statistics-block {
     padding: 30px 0px;
-
   }
 }
 
@@ -539,4 +601,23 @@ nav .nav-link {
   #articles .article-block {
     height: 315px;
   }
+}
+
+/* ------------------------ swiper ------------------------ */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.swiper-horizontal>.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction{
+  
 }
