--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,11 @@ ul {
 }
 
 .navbar-toggler {
-  background-color: #95d7f1;
+  background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
+}
+
+.navbar-toggler:focus {
+  box-shadow: none;
 }
 
 .navbar-toggler:hover {
@@ -52,8 +56,22 @@ nav .nav-item {
 }
 
 nav .nav-link {
-  color: #fff;
-  font-weight: 600;
+  color: #E1E1E1;
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 120%;
+}
+
+nav a.active {
+  color: #FFF !important;
+  font-family: Tajawal !important;
+  font-size: 18px !important;
+  font-style: normal !important;
+  font-weight: 700 !important;
+  line-height: 100% !important;
 }
 
 #header .ask-request {
@@ -894,13 +912,238 @@ footer .last-block a {
 
 /************************************ END FOOTER  ************************************/
 
+/************************************ START Who We Are  ************************************/
+.who-we-are-bg {
+  background: url(../imgs/who-we-are-bg.webp) no-repeat bottom center/cover !important;
+  height: 560px !important;
+  position: relative;
+}
+
+.who-we-are-bg .headerContent {
+  height: calc(560px - 120px) !important;
+}
+
+.who-we-are-bg::before {
+  content: "";
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
+  position: absolute;
+  inset: 0;
+}
+
+#more-about-us {
+  padding: 128px 0;
+}
+
+#more-about-us p {
+  color: #333;
+  text-align: justify;
+  font-family: Tajawal;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  width: 50%;
+}
+
+#more-about-us .more-about-us-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 64px;
+}
+
+#more-about-us .more-about-us-block-2 {
+  gap: 100px;
+}
+
+#more-about-us .avatar {
+  width: 50%;
+}
+
+#more-about-us .more-about-us-block div {
+  width: 50%;
+}
+
+#more-about-us .more-about-us-block .imgs {
+  width: 50%;
+  position: relative;
+  height: 435px;
+}
+
+#more-about-us .more-about-us-block .imgs img {
+  position: absolute;
+}
+
+#more-about-us .more-about-us-block .imgs .two {
+  left: -20px;
+  top: 20px;
+}
+
+#more-about-us .more-about-us-block .imgs .three {
+  left: -40px;
+  top: 40px;
+}
+
+.more-about-us {
+  background: rgba(27, 64, 113, 0.05);
+}
+
+.more-about-us-3 {
+  background: linear-gradient(95deg, #304259 27.16%, #347BD9 170.44%);
+}
+
+.more-about-us-3 p {
+  color: #fff !important;
+}
+
+#vision {
+  padding: 137px 0;
+  background: rgba(27, 64, 113, 0.05);
+}
+
+.under-line-title {
+  color: var(--base, #1B4071);
+  text-align: right;
+  font-family: Tajawal;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  position: relative;
+}
+
+.under-line-title::before {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  right: 13px;
+  width: 112px;
+  height: 6px;
+  border-radius: 50px;
+  background: #1B4071;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+}
+
+.vision-desc {
+  color: #1B4071;
+  text-align: justify;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  padding: 58px;
+}
+
+.our-massage {
+  background-color: #fff !important;
+}
+
+#our-goals {
+  padding: 128px 0;
+  background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
+}
+
+#our-goals h3 {
+  color: #FFF;
+  text-align: center;
+  font-family: Cabin;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 48px;
+}
+
+#our-goals .our-goals-block {
+  display: flex;
+  height: 180px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  border-radius: 10px;
+  background: #FFF;
+}
+
+#our-goals .our-goals-block img {
+  margin-bottom: 16px;
+  width: 32px;
+  height: 27.921px;
+}
+
+#our-goals .our-goals-block h4 {
+  color: var(--base, #1B4071);
+  text-align: center;
+  font-family: Tajawal;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 150%;
+}
+
+#our-value {
+  padding: 128px 0;
+}
+
+#our-value h3 {
+  color: #1B4071;
+  text-align: center;
+  font-family: Cabin;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+  margin-bottom: 48px;
+}
+
+#our-value .our-value-block {
+  box-shadow: 10px 15px 10px 2px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(240deg, rgba(102, 142, 191, 0.05) -118.4%, #F4F5F8 -23.05%, #FFF 96.98%);
+  display: flex;
+  height: 100%;
+  padding: 24px 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+#our-value .our-value-block h4 {
+  color: #1B4071;
+  font-family: Tajawal;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+#our-value .our-value-block p {
+  color: #1B4071;
+  font-family: Tajawal;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+/************************************ END Who We Are  ************************************/
+
 @media (max-width: 991px) {
   nav .nav-item {
     margin-right: 0px;
   }
 
   .navbar-nav {
-    background-color: #95d7f1;
+    background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
   }
 
   #video h3 {
@@ -925,6 +1168,29 @@ footer .last-block a {
 
   #articles .title {
     padding: 0 0 60px 135px;
+  }
+
+  #more-about-us .more-about-us-block {
+    flex-direction: column;
+    gap: 0px;
+  }
+
+  #more-about-us .more-about-us-block-2 {
+    flex-direction: column-reverse;
+  }
+
+  #more-about-us .more-about-us-block p {
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+  #more-about-us .more-about-us-block img {
+    width: 100%;
+  }
+
+  #more-about-us .more-about-us-block .imgs {
+    width: 100%;
+    margin-top: 50px;
   }
 }
 
@@ -1001,6 +1267,34 @@ footer .last-block a {
 
   #last-blog .last-blog-block div button {
     width: 100%;
+  }
+
+  #more-about-us {
+    padding: 128px 0 0 0;
+  }
+
+  #more-about-us p {
+    font-size: 22px;
+  }
+
+  #more-about-us .more-about-us-block .imgs .two {
+    left: 0px;
+  }
+
+  #more-about-us .more-about-us-block .imgs .three {
+    left: -0px;
+  }
+
+  #vision {
+    padding: 50px 0;
+  }
+
+  .vision-desc {
+    padding: 0;
+  }
+
+  .under-line-title {
+    margin-bottom: 40px;
   }
 }
 
