--- a/css/main.css
+++ b/css/main.css
@@ -1137,6 +1137,177 @@ footer .last-block a {
 
 /************************************ END Who We Are  ************************************/
 
+/************************************ START Gallery  ************************************/
+.gallery-bg {
+  background: url(../imgs/gallery.webp) no-repeat top center/cover !important;
+  height: 660px !important;
+  position: relative;
+}
+
+.gallery-bg .headerContent {
+  height: calc(560px - 120px) !important;
+}
+
+.gallery-bg::before {
+  content: "";
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.50) 0%, rgba(0, 0, 0, 0.50) 100%);
+  position: absolute;
+  inset: 0;
+}
+
+#our-gallery {
+  padding: 80px 0;
+}
+
+#our-gallery .filter-text {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+  width: 100%;
+  margin-bottom: 64px;
+}
+
+#our-gallery .filter-text span {
+  color: #333;
+  text-align: right;
+  font-family: Tajawal;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 150%;
+  cursor: pointer;
+  transition: .2s linear;
+  -webkit-transition: .2s linear;
+  -moz-transition: .2s linear;
+  -ms-transition: .2s linear;
+  -o-transition: .2s linear;
+}
+
+#our-gallery .filter-text span:hover {
+  color: #1B4071;
+}
+
+#our-gallery .filter-text span.active {
+  color: #1B4071;
+  text-align: right;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+#our-gallery .main-block-gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 64px;
+}
+
+#our-gallery .main-block-gallery .gallery-block {
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  border: 1px solid #333;
+  background: #FFF;
+  overflow: hidden;
+  transition: .3s linear;
+  -webkit-transition: .3s linear;
+  -moz-transition: .3s linear;
+  -ms-transition: .3s linear;
+  -o-transition: .3s linear;
+  cursor: pointer;
+}
+
+#our-gallery .main-block-gallery .gallery-block figure {
+  margin: 0;
+}
+
+#our-gallery .main-block-gallery .gallery-block img {
+  display: flex;
+  width: 413px;
+  height: 433px;
+  padding: 12px 24px;
+  justify-content: flex-end;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+#our-gallery .main-block-gallery .gallery-block-content {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+  padding: 24px 37px;
+}
+
+#our-gallery .main-block-gallery .gallery-block span {
+  color: #1B4071;
+  text-align: right;
+  font-family: Tajawal;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+#our-gallery .main-block-gallery .gallery-block h3 {
+  color: #1B4071;
+  text-align: right;
+  font-family: Tajawal;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 150%;
+}
+
+#our-gallery .main-block-gallery .gallery-block p {
+  color: #333;
+  text-align: right;
+  font-family: Tajawal;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+}
+
+#our-gallery .main-block-gallery .gallery-block.active,
+#our-gallery .main-block-gallery .gallery-block:hover {
+  background: #1B4071;
+}
+
+#our-gallery .main-block-gallery .gallery-block.active span,
+#our-gallery .main-block-gallery .gallery-block:hover span,
+#our-gallery .main-block-gallery .gallery-block.active h3,
+#our-gallery .main-block-gallery .gallery-block:hover h3,
+#our-gallery .main-block-gallery .gallery-block:hover p,
+#our-gallery .main-block-gallery .gallery-block.active p {
+  color: #fff;
+}
+
+#our-gallery .main-block-gallery button {
+  background: linear-gradient(89deg, #1B4071 11.59%, #78A5DF 139.53%);
+  border-radius: 5px;
+  display: flex;
+  width: 179px;
+  padding: 12px 20px;
+  justify-content: center;
+  align-items: center;
+  color: #FFF;
+  text-align: center;
+  font-family: Cabin;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%;
+  border: none;
+  margin: 0 auto;
+}
+
+
+/************************************ END Gallery  ************************************/
+
 @media (max-width: 991px) {
   nav .nav-item {
     margin-right: 0px;
@@ -1191,6 +1362,21 @@ footer .last-block a {
   #more-about-us .more-about-us-block .imgs {
     width: 100%;
     margin-top: 50px;
+  }
+
+  #our-gallery .main-block-gallery .gallery-block {
+    flex-direction: column;
+  }
+
+  #our-gallery .main-block-gallery .gallery-block img {
+    width: 100vw;
+    object-fit: cover;
+    padding: 0;
+  }
+
+  #our-gallery .main-block-gallery .gallery-block-content {
+    width: 100%;
+    gap: 20px;
   }
 }
 
@@ -1295,6 +1481,14 @@ footer .last-block a {
 
   .under-line-title {
     margin-bottom: 40px;
+  }
+
+  #our-gallery .main-block-gallery .gallery-block h3 {
+    font-size: 38px;
+  }
+
+  #our-gallery .main-block-gallery .gallery-block p {
+    font-size: 24px;
   }
 }
 
@@ -1469,4 +1663,25 @@ footer .last-block a {
   .nav-btn {
     display: none;
   }
+}
+
+.copyRight {
+  background-color: #FAFAFA;
+  display: flex;
+  height: 51px;
+  padding: 25px 0px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.copyRight p {
+  text-align: center;
+  color: #737373;
+  font-family: Tajawal;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin: 0;
 }
